<resources>
    <string name="app_name">Handy U Visa</string>
    <string name="app_name_legal">Handy U Visa</string>
    <string name="title_activity_branding_screen">BrandingScreenActivity</string>
    <string name="txtInfoCertifications"># CERTIFICATE</string>
    <string name="payment_hotel_your">YOUR HOTEL</string>
    <string name="payment_hotel_nights">nights</string>
    <string name="forgot_password">Password recovery</string>
    <string name="location_permision">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="location_failed">Fail to fetch your current location. Please check your GPS status and try again</string>
    <string name="skip_walk">Skip</string>
    <string name="done_walk">Start</string>
    <string name="intellilink">Intellilink</string>
    <string name="myvisaenterprise">My Visa Enterprise</string>
    <string name="visacheckoutweb">Visa Checkout</string>
    <string name="cobertura_basica">Basic coverages</string>
    <string name="title_walk_01">Welcome to\n Handy U Visa</string>
    <string name="title_walk_02">Feel secure\n with mCard</string>
    <string name="title_walk_03">Tranquility at\n your fingertips</string>
    <string name="title_walk_04">A new method\n of mobile payment</string>
    <string name="title_walk_05">Buying is\n now easier</string>
    <string name="title_walk_06">A great travel\n experience</string>
    <string name="title_walk_07">Services and shops\n with one touch</string>
    <string name="walk_01">The \"all-in-one\" solution where\n you have thousands of products\n and services in your hand.</string>
    <string name="walk_02">Live and travel without worries with\n medical coverage. Protection for your\n everyday and financial needs.</string>
    <string name="walk_03">Now your certificate of coverage is\n available on your mobile device\n when you need it.</string>
    <string name="walk_04">You can now make purchases in\n minutes, safely and easily with Visa\n Checkout.</string>
    <string name="walk_05">Find everything you want\n at the price you want\n on our market.</string>
    <string name="walk_06">Find flights, hotels and\n activities in any part\n of the world.</string>
    <string name="walk_07">Restaurants, shops, professional\n services for your home, care\n for pets, cars and much mores.</string>
    <string name="location_yes">Yes</string>
    <string name="demo_iatai">TEST IATAI</string>
    <string name="checkmytrip">Check My Trip</string>
    <string name="title_endless">Handy S</string>
    <string name="prod_iatai">IATAI</string>
    <string name="location_no">No</string>
    <string name="TODAY">TODAY</string>
    <string name="room">ROOMS</string>
    <string name="hotels_room_description">If you are traveling, please include yourself in Room 1</string>
    <string name="hotels_guests_per_room">Guests per room</string>
    <string name="SAME_WEEK">LAST WEEK</string>
    <string name="SAME_MONTH">LAST MONTH</string>
    <string name="BEFORE">OLDER</string>
    <string name="more_items">More items</string>
    <string name="txt_transaction_empty">No transactions found</string>
    <string name="edit_personal_info">PERSONAL INFO</string>
    <string name="edit_change_password">CHANGE PASSWORD</string>
    <string name="qr_description">DESCRIPTION</string>
    <string name="qr_vendor">VENDOR</string>
    <string name="qr_itemn">ITEMS</string>
    <string name="qr_tax_fees">TAXES AND FEES</string>
    <string name="qr_total_price">TOTAL PRICE</string>
    <string name="qr_total_pay">PAY NOW</string>
    <string name="handi_u">Handy U</string>
    <string name="onepocket">Onepocket</string>
    <string name="payment_hotel_guest">Guest</string>
    <string name="mCard">mCard</string>
    <string name="payment_hotel_room">Room</string>
    <string name="payment_hotel_checking">CHECK IN</string>
    <string name="payment_hotel_checkout">CHECK OUT</string>
    <string name="payment_hotel_taxes_fees">TAXES AND FEES</string>
    <string name="payment_hotel_total_price">TOTAL PRICE</string>
    <string name="payment_hotel_onepocket">PAY WITH ONE POCKET</string>
    <string name="title_activity_intro_screen">IntroScreenActivity</string>
    <string name="qr_scan_description">Scan the QR code with your phone camera to pay the bill.</string>
    <string name="login">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="recover_password">Forgot your password?</string>
    <string name="call_us">CALL US</string>
    <string name="call_us_now">CALL US NOW</string>
    <string name="conf_email1">We just send an email to</string>
    <string name="conf_email2">with a secure link to reset your password.</string>
    <string name="conf_email3">Have you not yet received the email?</string>
    <string name="check_email">Check your email!</string>
    <string name="title_qr_scan">Scan Qr</string>
    <string name="slogan_welcome">Welcome to</string>
    <string name="slogan_all_in_one">the best all-in-one app</string>
    <string name="skip_intro">Skip to menu</string>
    <string name="welcome">Welcome back!</string>
    <string name="logout">SIGN OUT</string>
    <string name="pay_with_visa_privilege">Pay with VISA and get special promo price</string>
    <string name="mCard_Premium">Disfruta tus viajes sin preocupaciones durante todo el año. Tendrás 100.000 USD en gastos médicos que te dan tranquilidad y confianza.</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="send">RESET MY PASSWORD</string>
    <string name="send_chat">Send</string>
    <string name="send_again">SEND AGAIN</string>
    <string name="go_to_email">Go to email</string>
    <string name="go_to_login">BACK TO LOGIN</string>
    <string name="info_forgot">Enter your email adress below\n and we will send you a secure link\n to reset your password</string>
    <string name="search_flights">Search Flights</string>
    <string name="search_concierge">Search Activities</string>
    <string name="search_hotels">Search Hotels</string>
    <string name="continue_checkout">CONTINUE TO CHECKOUT</string>
    <string name="txt_user_greeting">Hi, %s</string>
    <string name="title_my_account">My account</string>
    <string name="title_visa_checkout">Visa Checkout</string>
    <string name="title_market_place">Market</string>
    <string name="services">Services</string>
    <string name="onetouch">Onetouch</string>
    <string name="title_flights">Book flights</string>
    <string name="title_hotels">Hotels</string>
    <string name="title_entertainment">Entertainment</string>
    <string name="title_chat">Chat</string>
    <string name="title_call">Call</string>
    <string name="title_activity_vch">VCHActivity</string>
    <string name="title_register">Register</string>
    <string name="title_payment_summary">Payment Summary</string>
    <string name="title_card_info">Card information</string>
    <string name="title_flight_results">Flights results</string>
    <string name="title_hotel_results">Hotels results</string>
    <string name="txt_hint_email">E-mail</string>
    <string name="txt_hint_pass">Password</string>
    <string name="txt_hint_current_pass">Current password</string>
    <string name="txt_hint_new_pass">New password</string>
    <string name="txt_username">Name</string>
    <string name="txt_hint_cc_name">Name</string>
    <string name="txt_hint_cc_surname">Last Name</string>
    <string name="txt_hint_repass">Confirm password</string>
    <string name="txt_hint_register">Please enter your personal information to create your account.</string>
    <string name="txt_hint_chat">Write your message</string>
    <string name="txt_hint_search_airport">Enter at least 3 characters</string>
    <string name="txt_btnaskrecover">SUBMIT</string>
    <string name="txt_btnrecover">Restore password</string>
    <string name="txt_lbl_recover">If you have registered a card, please enter the last 4 digits of this.</string>
    <string name="txt_lbl_callwait">Please hold while we connect you to an adviser.</string>
    <string name="txt_lbl_setupChat">We are connecting you to an adviser</string>
    <string name="txt_lbl_callready">OneTouch Call is ready</string>
    <string name="txt_lbl_callcalling">One Touch Call is calling</string>
    <string name="txt_lbl_callInProgress">Speaking to adviser</string>
    <string name="err_no_internet">There is no internet connection.</string>
    <string name="err_novalid_mail">The email is not valid.</string>
    <string name="resend_mail">We have resent the email.</string>
    <string name="txt_lbl_endcall">END CALL</string>
    <string name="txt_lbl_speaker">Speaker</string>
    <string name="txt_lbl_mute">Mute</string>
    <string name="txt_lbl_disconnect">OneTouch Call disconnected</string>
    <string name="txt_lbl_connect_err">Onetouchcall is not available right now. Please try again later.</string>
    <string name="txt_lbl_cancelling">We are cancelling your call.</string>
    <string name="txt_lbl_agent">You are talking: %s</string>
    <string name="txt_lbl_chat_ts">%d minutes ago</string>
    <string name="txt_lbl_departure">FROM</string>
    <string name="txt_lbl_arrival">TO</string>
    <string name="txt_lbl_select_airport">Select airport or city</string>
    <string name="txt_lbl_select_cabin">SELECT CABIN</string>
    <string name="txt_lbl_depart">DEPART DATE</string>
    <string name="txt_lbl_return">RETURN DATE</string>
    <string name="txt_lbl_select_date">Select desired date</string>
    <string name="txt_lbl_economy">Economy</string>
    <string name="txt_lbl_business">Business</string>
    <string name="txt_lbl_first">First</string>
    <string name="txt_lbl_passengers">PASSENGERS</string>
    <string name="txt_lbl_adults">ADULTS</string>
    <string name="txt_lbl_adults_description">12+ years</string>
    <string name="txt_lbl_child">CHILDREN</string>
    <string name="txt_lbl_child_description">2&#8211;11 years</string>
    <string name="txt_lbl_infants">INFANTS</string>
    <string name="txt_lbl_infants_description">0&#8211;24 months</string>
    <string name="txt_lbl_select_passengers">Select the number of passengers who will be travelling to your destination.</string>
    <string name="txt_lbl_searchFlightsWait">We are looking for the best rates for your trip</string>
    <string name="txt_lbl_searchConciergeWait">We are looking for the best rates for your activities</string>
    <string name="tv_lbl_empty_search">Sorry no matches.</string>
    <string name="font_muli" translatable="false">fonts/Muli.ttf</string>
    <string name="font_muli_bold" translatable="false">fonts/Muli-Bold.ttf</string>
    <string name="font_muli_extraLight" translatable="false">fonts/Muli-ExtraLight.ttf</string>
    <string name="font_muli_light" translatable="false">fonts/Muli-Light.ttf</string>
    <string name="title_concierge_whatever_you_want">Whatever you want to\n do in the world</string>
    <string name="title_concierge_city_by_city">City by city, your music, your tastes,\n places and experiences in your\n next destination.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="editprofile_ok">Your profile has been successfully updated</string>
    <string name="titleCancelChatCall">End chat</string>
    <string name="txtConfirmationCancelChatCall">Are you sure you want to end\n this current chat?</string>
    <string name="cancelDialogChatCall">CANCEL</string>
    <string name="okCancelChatCall">OK</string>
    <string name="titleCancelCall">End call</string>
    <string name="txtConfirmationCancelCall">Are you sure you want to end\n this current call?</string>
    <string name="error_ok">OK</string>
    <string name="txt_error_code">ERROR CODE: </string>
    <string name="title_security_error">We’re Sorry!</string>
    <string name="txt_security_error_message">We are having some technical difficulties.\nPlease try again later.</string>
</resources>