<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/allem_gray_extra_light">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lbl_adults"
            android:textSize="13sp"
            android:textColor="@color/PersonSelectorItemDescriptionTitle_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lbl_adults_description"
            android:layout_marginTop="-4dp"
            android:textColor="@color/PersonSelectorItemDescriptionSubTitle"
            android:textSize="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:layout_marginLeft="42dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lbl_child"
            android:textSize="13sp"
            android:textColor="@color/PersonSelectorItemDescriptionTitle_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lbl_child_description"
            android:layout_marginTop="-4dp"
            android:textColor="@color/PersonSelectorItemDescriptionSubTitle"
            android:textSize="10sp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/PersonSelectorItemDescriptionTitle_text"
                android:text="@string/txt_lbl_infants"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_lbl_infants_description"
                android:layout_marginTop="-4dp"
                android:textColor="@color/PersonSelectorItemDescriptionSubTitle"
                android:textSize="9sp"/>

        </LinearLayout>

</LinearLayout>