<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="200dp"
    tools:context=".LoginNewUser">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textColor="@color/PURPLE_COLOR"
        android:layout_marginTop="20dp"
        app:font="@string/font_muli_bold"
        android:textSize="18sp"/>


    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/editprofile_ok"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/txtprivilegeinfo"
        android:layout_marginTop="70dp"
        android:textColor="@color/BodyAlert_text"
        android:layout_below="@+id/titletextCancelDialog2" />

    <com.allegra.handyuvisa.utils.CustomizedTextView
        android:id="@+id/btnAcceptProfile"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_corner_transparent_orange"
        android:text="@string/ua_ok"
        android:textColor="@color/SmallButtonWithBorder_text"
        app:font="@string/font_muli"
        android:textSize="15sp"
        android:layout_below="@+id/txtprivilegeinfo"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>