<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_body"
    android:background="@drawable/background"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb_login"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/pb_login"
        android:layout_alignParentEnd="true">


        <LinearLayout
            android:id="@+id/info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="38dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:visibility="visible"
            android:layout_alignParentBottom="false">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView20"
                android:src="@drawable/password_icon"
                android:layout_alignParentTop="false" />

            <com.allegra.handyuvisa.utils.CustomizedTextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/recover_password"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/GeneralTitle2_text"
                android:textSize="24sp"
                app:font="@string/font_muli_extraLight"/>

            <com.allegra.handyuvisa.utils.CustomizedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/GeneralDescription"
                android:textSize="14sp"
                android:text="@string/info_forgot"
                android:textAlignment="center"
                android:id="@+id/txtForgotPassInfo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                app:font="@string/font_muli_light"/>

            <com.allegra.handyuvisa.utils.CustomizedEditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/field_mail"
                android:drawableRight="@drawable/icon_clear"
                android:hint="@string/txt_hint_email"
                android:inputType="text|textNoSuggestions|textEmailAddress"
                android:maxLines="1"
                android:textSize="16sp"
                app:fontEdit="@string/font_muli"/>

            <com.allegra.handyuvisa.utils.CustomizedTextView
                android:id="@+id/button_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_corner_orange_bg"
                app:font="@string/font_muli"
                android:gravity="center"
                android:text= "@string/send"
                android:textColor="@color/BigButton_text"
                android:layout_marginTop="50dp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
